# test

./: App.qml  CMakeLists.txt  Main.qml  New Text Document (2).txt  New Text Document (3).txt  New Text Document.txt  main.cpp  new.txt
Elevia/Elevia/: CMakeLists.txt  Elevia.qmlproject  Elevia.qrc  qmlmodules
Elevia/Elevia/content/: CMakeLists.txt  Screen01.ui.qml
Elevia/Elevia/imports/: CMakeLists.txt
Elevia/Elevia/imports/Elevia/: CMakeLists.txt  qmldir
Elevia/Elevia/imports/Elevia/designer/: plugin.metainfo
Elevia/Elevia/src/: import_qml_plugins.h  main.cpp
Elevia/Elevia/src/wifi/: wifi.cpp  wifi.h
Elevia_app/: Elevia_app.qmlproject  Elevia_app.qmlproject.qtds  qds.cmake
Elevia_app/Elevia_app/: CMakeLists.txt
Elevia_app/Elevia_appContent/: CMakeLists.txt
Elevia_appApp-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Elevia_appApp-Debug/.qt/: QtDeploySupport.cmake
Elevia_appApp-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_Elevia_appApp.cmake  Qt6_QmlPlugins_Imports_Elevia_appApp.rsp
Elevia_appApp-Debug/.qtc_clangd/: compile_commands.json
Elevia_appApp-Debug/.rcc/: configuration.qrc  qrc_configuration.cpp
Elevia_appApp-Debug/App/: cmake_install.cmake
Elevia_appApp-Debug/Dependencies/: cmake_install.cmake
Elevia_appApp-Debug/Elevia_app/: Elevia_appplugin_Elevia_appPlugin.cpp  Elevia_appplugin_init.cpp  cmake_install.cmake  elevia_app_qmltyperegistrations.cpp
Elevia_appApp-Debug/Elevia_appApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Elevia_appApp-Debug/Elevia_appContent/: Elevia_appContentplugin_Elevia_appContentPlugin.cpp  Elevia_appContentplugin_init.cpp  cmake_install.cmake  elevia_appcontent_qmltyperegistrations.cpp
Elevia_app_old/: CMakeLists.txt
Elevia_app_old/App/: CMakeLists.txt  app.cpp  app.h  main.cpp
Elevia_app_old/Elevia_app/: Constants.qml  qmldir
UntitledProject3/: CMakeLists.txt  CMakeLists.txt.shared  UntitledProject3.qmlproject  UntitledProject3.qmlproject.qtds  UntitledProject3.qrc  qds.cmake
UntitledProject3App-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
UntitledProject7/: CMakeLists.txt  UntitledProject7.qmlproject  UntitledProject7.qmlproject.qtds  qds.cmake
UntitledProject7App-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
app 1/: App.qml  Back.qml  CMakeLists.txt  Resource.qrc  main.cpp  resourse.qrc
app2/: CMakeLists.txt  main.cpp
app3/: CMakeLists.txt  Home_window.qml  Icon.qml  Main.qml  main.cpp
elevia/: CMakeLists.txt  main.cpp  qml.qrc
elevia_old/: CMakeLists.txt  qml.qrc
main/: main.ino
parlar2/: Boiler.qml  P3d.qml  main.cpp
project1/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  todo_list.txt
project1/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  project1  qtcsettings.cmake
project1/b/.cmake/api/v1/reply/: cache-v2-a4a2203469c4cca071d8.json  cmakeFiles-v1-caacc41026c80a450046.json  codemodel-v2-0dcea4dcc1e1803fdb20.json  directory-.-Debug-a5c696ae2506aa80b12c.json  index-2025-11-23T16-40-46-0019.json  target-project1-Debug-17cfa75943cf2bc45989.json  target-project1_autogen-Debug-2728b926ed14cc704bb7.json
project1/b/.qtc_clangd/: compile_commands.json
project1/b/.qtc_clangd/.cache/clangd/index/: QDebug.2B84F9FD3B3C295C.idx  QGuiApplication.DE3DE0C832A34537.idx  QObject.E3DFF7E6F4B7125A.idx  QProcess.B3CFD21857A54552.idx  QQmlApplicationEngine.E943520707DB2C7D.idx  QQmlContext.777921AD8C0F8BF8.idx  __stdarg___va_copy.h.EA80E60675CB34E1.idx  __stdarg_va_arg.h.CDF7864C788FA40E.idx  __stdarg_va_list.h.B3C7BBAAD85FD8DD.idx  __stddef_null.h.EE22A87E65E30EB0.idx  align.h.221FD06AE2C65136.idx  atomic_base.h.3FB0E926D1D72984.idx  auto_ptr.h.6915473E60A8EF3E.idx  chrono.h.E47EADF7CD414D42.idx  cstddef.60A37F42E1D73630.idx  cstdint.F08D76C5515E2DFF.idx  cxxabi_init_exception.h.34739FFBD87E1268.idx  event_handeler.cpp.5DA7E7A718B35FEE.idx  event_handeler.h.9FAA3A7B798AE258.idx  exception.h.F0B1405728E6ED13.idx  limits.3C4E3EA66E9E2E49.idx  locale_classes.h.43BCFF71F59C69B5.idx  main.cpp.89A44460967728A0.idx  parse_numbers.h.C204F61B37F90AA4.idx  qalgorithms.h.287F20BC665226A0.idx  qarraydata.h.9078BD8431B3B2F5.idx  qatomic.h.03C1DB442A178BA4.idx  qatomic_cxx11.h.24292226CE3D5033.idx  qbasicatomic.h.6BB51A2F6149372D.idx  qbytearray.h.F27AD2ECFBB838C1.idx  qbytearraylist.h.1729285872CBA7C3.idx  qchar.h.A80ED0BF72733181.idx  qcompilerdetection.h.42C38EAAA7169BBD.idx  qconfig.h.8709E216DF7CB5A4.idx  qcontainerfwd.h.949CC948D077B4D1.idx  qcontainertools_impl.h.6EBAA50928A2073A.idx  qcontiguouscache.h.D38145787FDC413F.idx  qcoreapplication.h.89C693B1B22EBAB5.idx  qcoreevent.h.D01143FEE8A51F87.idx  qdebug.h.8AF9FE508A15A6A4.idx  (+95 more)
project1/b/project1_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
project1/b/project1_autogen/4MM46SQVC4/: moc_event_handeler.cpp.d
project1/do not compile content of this folder/wifi /: wifimanager.cpp  wifimanager.h
project1/res/: Glassy.qml  Glob_var.qml  Icon.qml  Left_side_panel.qml  Page_start.qml
project1/res/3d/: P3d.qml
project1/res/boiler/: Boiler.qml
project1/res/control/: blue.cpp  blue.h  bluetooth.cpp  bluetooth.h  connmanmanager.h  event_handeler.cpp  event_handeler.h  mqttcallback.cpp  mqttclient.cpp  mqttclient.h  wifi.cpp  wifi.h
project1/res/control/bluetooth/: bluetooth.cpp  bluetooth.h
project1/res/control/mqttcallback/: mqttcallback.cpp
project1/res/control/mqttclient/: mqttclient.cpp  mqttclient.h
project1/res/home/: Cl1.qml  Cl2.qml  Cl3.qml  Home.qml  Left_side.qml  Left_side_panel.qml  Right_side.qml  Right_side_panel.qml
project1/res/setting/: Bluetooth_panel.qml  Bottom.qml  Left_side.qml  Left_side_panel.qml  Right_side.qml  Setting.qml  Top_botton.qml  Wifi_Bottom.qml  Wifi_Top.qml  Wifi_panel.qml
project1/v2(delete befor compile)/: main.qml  wifi.cpp  wifi.h
sketch_oct12a/: sketch_oct12a.ino
sketch_oct13a/: sketch_oct13a.ino
tesla/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
untitled/: CMakeLists.txt
(+2523 files in other folders)
